--- a/demo.html
+++ b/demo.html
@@ -100,6 +100,90 @@
     </div>
   </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-</html>
+
+  <section class="hero">
+    <div class="hero-content">
+        <h1>Get Your Dream Website for Only ₹9,999</h1>
+        <p>Start your online journey with a professional website. Limited-time offer includes:</p>
+        <div class="price">₹9,999</div>
+        <a href="tel:+9763994015"><button>Call now</button></a>
+        <ul class="offer-list">
+            <li>Custom Website Design</li>
+            <li>Mobile Responsive Layout</li>
+            <li>Domain Name & Hosting (1 Year)</li>
+            <li>SEO Optimization</li>
+            <li>Social Media Integration</li>
+            <li>Contact Form</li>
+            <li>Fast Turnaround Time (7 Days)</li>
+        </ul>
+    </div>
+</section>
+
+<style>
+.hero {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-align: left;
+    padding: 50px;
+    background: url('./assets/images/banner.avif') center/cover no-repeat;
+    color: #fff;
+}
+
+.hero-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    max-width: 50%;
+    background: rgba(0, 0, 0, 0.6);
+    padding: 20px;
+    border-radius: 10px;
+}
+
+.hero-content h1 {
+    font-size: 2.5rem;
+    margin-bottom: 20px;
+}
+
+.hero-content p {
+    font-size: 1rem;
+    margin-bottom: 30px;
+    line-height: 1.6;
+}
+
+.hero-content .price {
+    font-size: 3rem;
+    margin-bottom: 30px;
+}
+
+.hero-content button {
+    background-color: #fff;
+    color: #000;
+    border: none;
+    padding: 15px 30px;
+    border-radius: 30px;
+    font-size: 1rem;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.hero-content button:hover {
+    background-color: #eaeaea;
+}
+
+.hero-content .offer-list {
+    list-style-type: none;
+    padding: 0;
+    margin-top: 30px;
+    background: rgba(0, 0, 0, 0.6);
+    padding: 20px;
+    border-radius: 10px;
+    color: #fff;
+}
+
+.hero-content .offer-list li {
+    margin-bottom: 10px;
+    font-size: 1rem;
+    line-height: 1.6;
+}
+</style>
