--- a/index.html
+++ b/index.html
@@ -334,9 +334,62 @@
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 
 
-    <footer class="footer">
-        <p>&copy; Datacrushanalytics | All rights reserved.</p>
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="footer-logo d-flex align-items-center">
+                        <img src="logo-placeholder.png" alt="Logo">
+                        <span>Linkdoor</span>
+                    </div>
+                    <div class="social-icons">
+                        <a href="#"><i class="bi bi-facebook"></i></a>
+                        <a href="#"><i class="bi bi-instagram"></i></a>
+                        <a href="#"><i class="bi bi-linkedin"></i></a>
+                    </div>
+                </div>
+                <div class="col-md-3 footer-section">
+                    <h5>We Offer</h5>
+                    <ul>
+                        <li><a href="#">Basic Website</a></li>
+                        <li><a href="#">Standard Website</a></li>
+                        <li><a href="#">Premium Websites</a></li>
+                        <li><a href="#">E-Commerce Websites</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3 footer-section">
+                    <h5>Services</h5>
+                    <ul>
+                        <li><a href="#">SEO Services</a></li>
+                        <li><a href="#">Re-development</a></li>
+                        <li><a href="#">Web Maintenance</a></li>
+                        <li><a href="#">Website Migration</a></li>
+                        <li><a href="#">Account</a></li>
+                        <li><a href="#">Logout</a></li>
+                        <li><a href="#">Members</a></li>
+                        <li><a href="#">Register</a></li>
+                        <li><a href="#">Login</a></li>
+                        <li><a href="#">User</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3 footer-section">
+                    <h5>Get In Touch</h5>
+                    <ul>
+                        <li>Nashik, Maharashtra</li>
+                        <li>+91 9763994015</li>
+                        <li><a href="mailto:thelinkdoor@gmail.com">info@datacrushanalytics.com</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 footer-bottom">
+                    <p>Copyright &copy; 2024 Linkdoor Portfolio</p>
+                    <p>Powered by Linkdoor Web Development</p>
+                </div>
+            </div>
+        </div>
     </footer>
+    
 
     <!-- JavaScript -->
     <script>
