--- a/index.html
+++ b/index.html
@@ -255,74 +255,53 @@
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <!-- footer start  -->
 
-    <section class="contact-section">
-        <div class="contact-container">
-            <!-- Contact Info Box -->
-            <div class="contact-box">
-                <h3>Address</h3>
-                <p><i class="fas fa-map-marker-alt"></i>A108 Adam Street, New York, NY 535022</p>
-            </div>
+    <div class="container">
+        <!-- Introduction Section -->
+        <div class="intro">
+            <h1>Hello,</h1>
+            <p>I'm Lalit Kawale, CEO & Head Web Developer of Linkdoor Solutions. With a passion for technology and a
+                commitment to excellence, I lead our team in delivering innovative web development solutions.</p>
+            <p class="name">Lalit Kawale<br>CEO & Head Web Developer</p>
+        </div>
 
-            <div class="contact-box">
-                <h3>Call Us</h3>
-                <p><i class="fas fa-phone"></i>+1 5589 55488 55</p>
-            </div>
-
-            <div class="contact-box">
-                <h3>Email Us</h3>
-                <p><i class="fas fa-envelope"></i>info@example.com</p>
-            </div>
-
-            <!-- Contact Form -->
-            <form id="contactForm" class="contact-form">
-                <h3>Send a Message</h3>
-                <input type="text" id="name" name="name" placeholder="Your Name" required>
-                <input type="email" id="email" name="email" placeholder="Your Email" required>
-                <input type="text" id="subject" name="subject" placeholder="Subject" required>
-                <textarea id="message" name="message" rows="5" placeholder="Message" required></textarea>
+        <!-- Form Section -->
+        <div class="form-container">
+            <h3>Contact Us</h3>
+            <form id="contactForm">
+                <input type="text" id="name" name="name" placeholder="Name *" required>
+                <input type="email" id="email" name="email" placeholder="Email *" required>
+                <input type="tel" id="mobile" name="mobile" placeholder="Mobile Number *" pattern="[0-9]{10}"
+                    title="Please enter a valid 10-digit mobile number" required>
+                <input type="text" id="subject" name="subject" placeholder="Subject *" required>
+                <textarea id="message" name="message" rows="5" placeholder="Message"></textarea>
                 <button type="submit">Send Message</button>
             </form>
         </div>
-    </section>
+    </div>
 
     <script>
         document.getElementById('contactForm').addEventListener('submit', function (event) {
-            event.preventDefault(); // Prevent the default form submission
+            event.preventDefault();
 
-            // Create an object from the form data
             const formData = new FormData(this);
             const data = {};
             formData.forEach((value, key) => {
                 data[key] = value;
             });
 
-            // Send the data as JSON to SheetDB API
-            fetch('https://sheetdb.io/api/v1/id6hsrkr5yhjh', {
+            fetch('https://sheetdb.io/api/v1/YOUR_SHEETDB_ID', {
                 method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                },
-                body: JSON.stringify({ data: [data] }),
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({ data: [data] })
             })
                 .then(response => response.json())
                 .then(result => {
-                    console.log(result);
-                    Swal.fire({
-                        icon: 'success',
-                        title: 'Success!',
-                        text: 'Form submitted successfully!',
-                        confirmButtonText: 'OK',
-                    });
-                    this.reset(); // Clear the form fields after successful submission
+                    alert('Message sent successfully!');
+                    this.reset();
                 })
                 .catch(error => {
                     console.error('Error:', error);
-                    Swal.fire({
-                        icon: 'error',
-                        title: 'Oops!',
-                        text: 'An error occurred while submitting the form. Please try again later.',
-                        confirmButtonText: 'OK',
-                    });
+                    alert('Failed to send message. Please try again.');
                 });
         });
     </script>
