--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
 
     <section class="hero">
         <div class="hero-content">
-            <h1>Get Your Dream Website for Only ₹9,999</h1>
+            <h1 style="font-weight: 600; font-size: 56px;">Get Your Dream Website for Only ₹9,999</h1>
             <p>Start your online journey with a professional website. Limited-time offer includes:</p>
 
-            <ul>
+            <ul style="margin-left: 40px;">
                 <li>Custom Design</li>
                 <li>SEO Optimization</li>
                 <li>Mobile Responsive</li>
@@ -260,17 +260,19 @@
             <!-- Contact Info Box -->
             <div class="contact-box">
                 <h3>Address</h3>
-                <p><i class="fas fa-map-marker-alt"></i>A108 Adam Street, New York, NY 535022</p>
+                <p><i class="fas fa-map-marker-alt"></i>DataCrush Analytics-Best Digital Marketing & IT services in
+                    Nashik
+                </p>
             </div>
 
             <div class="contact-box">
                 <h3>Call Us</h3>
-                <p><i class="fas fa-phone"></i>+1 5589 55488 55</p>
+                <p><i class="fas fa-phone"></i>+1 9763994015</p>
             </div>
 
             <div class="contact-box">
                 <h3>Email Us</h3>
-                <p><i class="fas fa-envelope"></i>info@example.com</p>
+                <p><i class="fas fa-envelope"></i>info@datacrushanalytics.com</p>
             </div>
 
             <!-- Contact Form -->
@@ -332,18 +334,63 @@
     <!-- footer start  -->
     <br>
 
-    <footer class="footer-bar">
-        <div class="left-section">
-            &copy; 2024 Datacrushanalytics. All Rights Reserved.
-        </div>
-        <div class="right-section">
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-facebook"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-linkedin"></i></a>
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="footer-logo d-flex align-items-center">
+                        <!-- <img src="logo-placeholder.png" alt="Logo"> -->
+                        <span>DataCrush Analytics </span>
+                    </div>
+                    <div class="social-icons">
+                        <a href="#"><i class="bi bi-facebook"></i></a>
+                        <a href="#"><i class="bi bi-instagram"></i></a>
+                        <a href="#"><i class="bi bi-linkedin"></i></a>
+                    </div>
+                </div>
+                <div class="col-md-3 footer-section">
+                    <h5>We Offer</h5>
+                    <ul>
+                        <li><a href="#">Basic Website</a></li>
+                        <li><a href="#">Standard Website</a></li>
+                        <li><a href="#">Premium Websites</a></li>
+                        <li><a href="#">E-Commerce Websites</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3 footer-section">
+                    <h5>Services</h5>
+                    <ul>
+                        <li><a href="#">SEO Services</a></li>
+                        <li><a href="#">Re-development</a></li>
+                        <li><a href="#">Web Maintenance</a></li>
+                        <li><a href="#">Website Migration</a></li>
+                        <li><a href="#">Account</a></li>
+                        <li><a href="#">Logout</a></li>
+                        <li><a href="#">Members</a></li>
+                        <li><a href="#">Register</a></li>
+                        <li><a href="#">Login</a></li>
+                        <li><a href="#">User</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3 footer-section">
+                    <h5>Get In Touch</h5>
+                    <ul>
+                        <li>Nashik, Maharashtra</li>
+                        <li>+919763994015</li>
+                        <li><a href="info@datacrushanalytics.com">info@datacrushanalytics.com</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 footer-bottom">
+                    <p> &copy; 2024 Datacrushanalytics | All right reserved</p>
+
+                </div>
+            </div>
         </div>
     </footer>
-    
+
+
 
 
     <!-- JavaScript -->
