--- a/index.html
+++ b/index.html
@@ -258,10 +258,12 @@
     <div class="container">
         <!-- Introduction Section -->
         <div class="intro">
-            <h1>Hello,</h1>
-            <p>I'm Lalit Kawale, CEO & Head Web Developer of Linkdoor Solutions. With a passion for technology and a
-                commitment to excellence, I lead our team in delivering innovative web development solutions.</p>
-            <p class="name">Lalit Kawale<br>CEO & Head Web Developer</p>
+            <h6>Hello,</h6>
+            <h3>I'm Manas Pisolkar, CEO & <br> Founder of Datacrushanalytics. <br> With a passion for technology <br>
+                and a
+                commitment to excellence, <br> I lead our team in delivering innovative web development solutions.</h3>
+            <h6 class="name">Manas Pisolkar</h6>
+            <h5>CEO & Founder Datacrushanalytics.</h5>
         </div>
 
         <!-- Form Section -->
@@ -277,160 +279,119 @@
                 <button type="submit">Send Message</button>
             </form>
         </div>
-    </div>
 
-    <script>
-        document.getElementById('contactForm').addEventListener('submit', function (event) {
-            event.preventDefault();
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+        <script>
+            document.getElementById('contactForm').addEventListener('submit', function (event) {
+                event.preventDefault();
 
-            const formData = new FormData(this);
-            const data = {};
-            formData.forEach((value, key) => {
-                data[key] = value;
-            });
+                // Create an object from form data
+                const formData = new FormData(this);
+                const data = {
+                    name: formData.get('name'),
+                    email: formData.get('email'),
+                    mobile: formData.get('mobile'),
+                    subject: formData.get('subject'),
+                    message: formData.get('message'),
+                };
 
-            fetch('https://sheetdb.io/api/v1/YOUR_SHEETDB_ID', {
-                method: 'POST',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({ data: [data] })
-            })
-                .then(response => response.json())
-                .then(result => {
-                    alert('Message sent successfully!');
-                    this.reset();
+                // Fetch request to send data to SheetDB
+                fetch('https://sheetdb.io/api/v1/id6hsrkr5yhjh', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ data: [data] }),
                 })
-                .catch(error => {
-                    console.error('Error:', error);
-                    alert('Failed to send message. Please try again.');
+                    .then(response => response.json())
+                    .then(result => {
+                        console.log(result);
+                        // Display success popup message
+                        Swal.fire({
+                            icon: 'success',
+                            title: 'Submitted!',
+                            text: 'Your response has been successfully submitted.',
+                            confirmButtonText: 'OK',
+                        });
+                        this.reset(); // Clear form fields
+                    })
+                    .catch(error => {
+                        console.error('Error:', error);
+                        // Display error popup message
+                        Swal.fire({
+                            icon: 'error',
+                            title: 'Error!',
+                            text: 'Failed to submit your response. Please try again later.',
+                            confirmButtonText: 'OK',
+                        });
+                    });
+            });
+        </script>
+
+
+
+
+       
+
+        <!-- JavaScript -->
+        <script>
+            let currentIndex = 0;
+            const totalCards = document.querySelectorAll('.carousel-card').length;
+            const carouselWrapper = document.getElementById('carouselWrapper');
+            const dotsContainer = document.getElementById('dots');
+
+            // Function to update carousel position
+            function updateCarousel() {
+                const offset = -currentIndex * 280; // 280px is the width of a card with margin
+                carouselWrapper.style.transform = `translateX(${offset}px)`;
+
+                // Update active dot
+                const dots = document.querySelectorAll('.carousel-dots span');
+                dots.forEach(dot => dot.classList.remove('active'));
+                dots[currentIndex].classList.add('active');
+            }
+
+            // Create dots dynamically based on the number of cards
+            for (let i = 0; i < totalCards; i++) {
+                const dot = document.createElement('span');
+                dot.addEventListener('click', () => {
+                    currentIndex = i;
+                    updateCarousel();
                 });
-        });
-    </script>
+                dotsContainer.appendChild(dot);
+            }
 
-
-
-    <!-- footer start  -->
-    <br>
-
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-3">
-                    <div class="footer-logo d-flex align-items-center">
-                        <!-- <img src="logo-placeholder.png" alt="Logo"> -->
-                        <span>DataCrush Analytics </span>
-                    </div>
-                    <div class="social-icons">
-                        <a href="#"><i class="bi bi-facebook"></i></a>
-                        <a href="#"><i class="bi bi-instagram"></i></a>
-                        <a href="#"><i class="bi bi-linkedin"></i></a>
-                    </div>
-                </div>
-                <div class="col-md-3 footer-section">
-                    <h5>We Offer</h5>
-                    <ul>
-                        <li><a href="#">Basic Website</a></li>
-                        <li><a href="#">Standard Website</a></li>
-                        <li><a href="#">Premium Websites</a></li>
-                        <li><a href="#">E-Commerce Websites</a></li>
-                    </ul>
-                </div>
-                <div class="col-md-3 footer-section">
-                    <h5>Services</h5>
-                    <ul>
-                        <li><a href="#">SEO Services</a></li>
-                        <li><a href="#">Re-development</a></li>
-                        <li><a href="#">Web Maintenance</a></li>
-                        <li><a href="#">Website Migration</a></li>
-                        <li><a href="#">Account</a></li>
-                        <li><a href="#">Logout</a></li>
-                        <li><a href="#">Members</a></li>
-                        <li><a href="#">Register</a></li>
-                        <li><a href="#">Login</a></li>
-                        <li><a href="#">User</a></li>
-                    </ul>
-                </div>
-                <div class="col-md-3 footer-section">
-                    <h5>Get In Touch</h5>
-                    <ul>
-                        <li>Nashik, Maharashtra</li>
-                        <li>+919763994015</li>
-                        <li><a href="info@datacrushanalytics.com">info@datacrushanalytics.com</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12 footer-bottom">
-                    <p> &copy; 2024 Datacrushanalytics | All right reserved</p>
-
-                </div>
-            </div>
-        </div>
-    </footer>
-
-
-
-
-    <!-- JavaScript -->
-    <script>
-        let currentIndex = 0;
-        const totalCards = document.querySelectorAll('.carousel-card').length;
-        const carouselWrapper = document.getElementById('carouselWrapper');
-        const dotsContainer = document.getElementById('dots');
-
-        // Function to update carousel position
-        function updateCarousel() {
-            const offset = -currentIndex * 280; // 280px is the width of a card with margin
-            carouselWrapper.style.transform = `translateX(${offset}px)`;
-
-            // Update active dot
-            const dots = document.querySelectorAll('.carousel-dots span');
-            dots.forEach(dot => dot.classList.remove('active'));
-            dots[currentIndex].classList.add('active');
-        }
-
-        // Create dots dynamically based on the number of cards
-        for (let i = 0; i < totalCards; i++) {
-            const dot = document.createElement('span');
-            dot.addEventListener('click', () => {
-                currentIndex = i;
+            // Automatic carousel slide
+            setInterval(() => {
+                currentIndex = (currentIndex + 1) % totalCards;
                 updateCarousel();
-            });
-            dotsContainer.appendChild(dot);
-        }
+            }, 1000);
 
-        // Automatic carousel slide
-        setInterval(() => {
-            currentIndex = (currentIndex + 1) % totalCards;
+            // Initial setup
             updateCarousel();
-        }, 1000);
-
-        // Initial setup
-        updateCarousel();
-    </script>
+        </script>
 
 
-    <script>
-        document.querySelector('a[href="#callnow"]').addEventListener('click', function (event) {
-            event.preventDefault();
-            const target = document.querySelector('#callnow');
-            target.scrollIntoView({ behavior: 'smooth', block: 'start' });
-        });
-
-    </script>
-
-
-    <!-- Faq -->
-    <script>
-        document.querySelectorAll('.faq-header').forEach((header) => {
-            header.addEventListener('click', () => {
-                const faqItem = header.parentElement;
-                faqItem.classList.toggle('open');
+        <script>
+            document.querySelector('a[href="#callnow"]').addEventListener('click', function (event) {
+                event.preventDefault();
+                const target = document.querySelector('#callnow');
+                target.scrollIntoView({ behavior: 'smooth', block: 'start' });
             });
-        });
 
-    </script>
+        </script>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+
+        <!-- Faq -->
+        <script>
+            document.querySelectorAll('.faq-header').forEach((header) => {
+                header.addEventListener('click', () => {
+                    const faqItem = header.parentElement;
+                    faqItem.classList.toggle('open');
+                });
+            });
+
+        </script>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
