--- a/index.html
+++ b/index.html
@@ -50,12 +50,15 @@
 
     <section class="hero">
         <div class="hero-content">
+            <!-- Add the logo here -->
+            <img src="./assets/images/datacrush logo png frr (1).png" alt="Logo" class="hero-logo">
+
             <h1
                 style="font-weight: 600; font-size: 56px; text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;">
-                Get Your Dream Website for Only ₹9,999</h1>
+                Get Your Dream Website for Only ₹9,999
+            </h1>
+
             <p>Start your online journey with a professional website. Limited-time offer includes:</p>
-
-
 
             <ul style="margin-left: 40px;">
                 <li>Custom Design</li>
@@ -66,11 +69,11 @@
             </ul>
 
             <div class="price-button">
-                <!-- <div class="price"></div> -->
                 <a href="tel:+9763994015"><button type="button">Call now</button></a>
             </div>
         </div>
     </section>
+
 
 
 
