--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <section class="hero">
         <div class="hero-content">
             <!-- Add the logo here -->
-            <img src="./assets/images/datacrush logo png frr (1).png" alt="Logo" class="hero-logo">
+            <img src="./assets/images/datacrush logo png frrr w (1).png" alt="Logo" class="hero-logo">
 
             <h1
                 style="font-weight: 600; font-size: 56px; text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;">
