--- a/index.html
+++ b/index.html
@@ -140,11 +140,11 @@
     <div class="container py-5">
         <div class=" mb-4">
             <h2 class="fw-bold " style="font-size: 40px;"> Projects</h2>
-            <p class="text-muted"
+            <!-- <p class="text-muted"
                 style="font-family:  Rubik, sans-serif; font-weight:400; font-size: 18px; Line-height:33.4286px;">
                 We create exceptional digital experiences tailored to our clients' needs, driving growth and success for
                 businesses worldwide.
-            </p>
+            </p> -->
         </div>
         <div class="row g-5">
             <!-- Card 1 -->
