--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </div>
 
             <h1
-                style="font-weight: 600; font-size: 56px; text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;">
+                style="font-weight: 600; font-size: 56px; text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #2046d2;">
                 Get Your Dream Website for Only ₹9,999
             </h1>
 
@@ -137,15 +137,16 @@
 
     <br><br>
 
+    <div class=" mb-4">
+        <h2 class="fw-bold " style="font-size: 40px; text-align: center;"> Projects</h2>
+        <p class="text-muted"
+            style="font-family:  Rubik, sans-serif; font-weight:400; font-size: 18px; Line-height:33.4286px; text-align: center;">
+            We create exceptional digital experiences tailored to our clients' needs, driving growth and success for
+            businesses worldwide.
+        </p>
+    </div>
     <div class="container py-5">
-        <div class=" mb-4">
-            <h2 class="fw-bold " style="font-size: 40px;"> Projects</h2>
-            <!-- <p class="text-muted"
-                style="font-family:  Rubik, sans-serif; font-weight:400; font-size: 18px; Line-height:33.4286px;">
-                We create exceptional digital experiences tailored to our clients' needs, driving growth and success for
-                businesses worldwide.
-            </p> -->
-        </div>
+
         <div class="row g-5">
             <!-- Card 1 -->
             <div class="col-md-4">
@@ -496,7 +497,7 @@
 
     <script>
         AOS.init({
-            duration:1000
+            duration: 1000
         });
     </script>
 
