--- a/index.html
+++ b/index.html
@@ -146,18 +146,6 @@
         </p>
     </div>
     <div class="container py-5">
-<<<<<<< HEAD
-        <div class=" mb-4 ">
-            <h2 class="fw-bold " style="font-size: 40px;"> Projects</h2>
-            <!-- <p class="text-muted"
-                style="font-family:  Rubik, sans-serif; font-weight:400; font-size: 18px; Line-height:33.4286px;">
-                We create exceptional digital experiences tailored to our clients' needs, driving growth and success for
-                businesses worldwide.
-            </p> -->
-        </div>
-=======
-
->>>>>>> 8c717766851c0e7ca8e2a359164ed83cc4a4aa44
         <div class="row g-5">
             <!-- Card 1 -->
             <div class="col-md-4">
@@ -217,23 +205,23 @@
     <div class="carousel-container">
         <div class="carousel-wrapper" id="carouselWrapper">
             <div class="carousel-card">
-                <h3>Rahul Sharma</h3>
+                <h3>Rushi Kekane</h3>
                 <p>"Amazing service! The team was professional and efficient."</p>
             </div>
             <div class="carousel-card">
-                <h3>Priya Kapoor</h3>
+                <h3>Raj Pawar</h3>
                 <p>"A fantastic experience! I highly recommend them."</p>
             </div>
             <div class="carousel-card">
-                <h3>Arjun Mehta</h3>
+                <h3>Harshal Magar</h3>
                 <p>"Exceeded my expectations! A great team to work with."</p>
             </div>
             <div class="carousel-card">
-                <h3>Neha Gupta</h3>
+                <h3>Abhinav Kolhe</h3>
                 <p>"Wonderful service and results! Will definitely work with them again."</p>
             </div>
             <div class="carousel-card">
-                <h3>Vikram Singh</h3>
+                <h3>Prasad Shinde</h3>
                 <p>"Excellent communication and delivery. Highly satisfied!"</p>
             </div>
         </div>
@@ -302,8 +290,7 @@
                 team is dedicated to delivering innovative web development solutions that empower businesses to achieve
                 their goals.
             </h3>
-            <h6 class="name">Manas Pisolkar</h6>
-            <h5>CEO & Founder Datacrushanalytics.</h5>
+            
         </div>
 
         <!-- Form Section -->
